examples/negative/ffi/extern_with_body.kai
# Negative fixture (#511 / FFI contract): `extern "C" fn` is a
# declaration (axiom-like), not a definition. A trailing body
# must be rejected.

extern "C" fn puts(s: String) : Int / Ffi = 0

fn main() : Int / Ffi = puts("hi")
